components/policies-rd/base/konflux-rbac/deny-serviceaccount-token-secrets/.chainsaw-test/resources/secret_legacy_serviceaccount_token.yaml
apiVersion: v1
kind: Secret
metadata:
  name: chainsaw-legacy-sa-token-secret
  annotations:
    kubernetes.io/service-account.name: chainsaw-token-test
type: kubernetes.io/service-account-token
